--- a/src/common/Footer.css
+++ b/src/common/Footer.css
@@ -45,7 +45,7 @@
 }
 
 .follow_us {
-	height: 10vh;
+	height: 18vh;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
@@ -70,6 +70,59 @@
 	text-align: left;
 	list-style-type: none;
 	margin-left: 6%;
+}
+
+.newsletter_footer {
+	height: 18vh;
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	text-align: center;
+}
+
+.input_newsletterFooter {
+	height: auto;
+	width: 25%;
+	margin-left: -30%;
+	margin-top: 1.5%;
+}
+
+.customer_service {
+	height: 30vh;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	text-align: center;
+}
+
+.customer_service ul {
+	height: 70%;
+	width: 30%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	text-align: left;
+	list-style-type: none;
+	margin-left: 6%;
+}
+
+.customer_service_images {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+	height: 60%;
+	width: 30%;
+	margin-right: 2%;
+}
+
+.customer_service_img {
+	height: 30%;
+	width: 20%;
+	z-index: 1001;
+	cursor: pointer;
 }
 
 .hidden {
