--- a/src/common/Footer.css
+++ b/src/common/Footer.css
@@ -44,20 +44,23 @@
 	z-index: 490;
 }
 
-.follow_us {
-	height: 18vh;
+.follow_us,
+.corporate,
+.newsletter_footer,
+.customer_service,
+.legal_area {
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
 	text-align: center;
 }
 
+.follow_us {
+	height: 18vh;
+}
+
 .corporate {
 	height: 30vh;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	text-align: center;
 }
 
 .corporate ul {
@@ -75,10 +78,6 @@
 .newsletter_footer {
 	height: 18vh;
 	width: 100%;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	text-align: center;
 }
 
 .input_newsletterFooter {
@@ -90,10 +89,6 @@
 
 .customer_service {
 	height: 30vh;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	text-align: center;
 }
 
 .customer_service ul {
@@ -123,6 +118,22 @@
 	width: 20%;
 	z-index: 1001;
 	cursor: pointer;
+}
+
+.legal_area {
+	height: 20vh;
+}
+
+.legal_area ul {
+	height: 70%;
+	width: 30%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	text-align: left;
+	list-style-type: none;
+	margin-left: 6%;
 }
 
 .hidden {
