--- a/src/common/Navbar.css
+++ b/src/common/Navbar.css
@@ -29,3 +29,100 @@
 	cursor: pointer;
 	color: #bc8247;
 }
+
+.mobile_nav {
+	display: none;
+}
+
+.mobile_menu {
+	display: none;
+}
+
+@media (max-width: 768px) {
+	.navbar {
+		height: 13vh;
+	}
+
+	.responsive_logo {
+		position: relative;
+		bottom: 20%;
+		height: 100%;
+		width: 100%;
+	}
+
+	.style_logo {
+		height: 100%;
+		object-fit: contain;
+		width: 100%;
+	}
+
+	.links {
+		margin: 0;
+		font-size: 12px;
+	}
+
+	.responsive_linksleft {
+		position: relative;
+		left: 8%;
+	}
+
+	.responsive_linksright {
+		position: relative;
+		right: 2%;
+	}
+}
+
+@media (max-width: 576px) {
+	.navbar {
+		display: none;
+	}
+
+	.mobile_nav {
+		z-index: 300;
+		height: 14vh;
+		width: 100vw;
+		position: fixed;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		top: 0;
+		background-color: #f5f5f5;
+		padding: 0 10%;
+	}
+
+	.mobile_logo {
+		height: 70%;
+		width: 30%;
+	}
+
+	.burger_menu {
+		height: 17%;
+		width: 7%;
+	}
+
+	.mobile_menu {
+		height: auto;
+		width: 22%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		background-color: white;
+		border-radius: 10%;
+		position: absolute;
+		top: 9%;
+		left: 75%;
+		padding: 2%;
+		z-index: 301;
+	}
+
+	.links {
+		width: 100%;
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		font-size: 12px;
+		margin: 5% 0;
+		font-weight: normal;
+	}
+}
