--- a/src/components/SaleOf.css
+++ b/src/components/SaleOf.css
@@ -62,3 +62,21 @@
 	height: 60%;
 	width: 10%;
 }
+
+@media (max-width: 768px) {
+	.saleof_products {
+		/* height: 200%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		background-color: #ffffff;
+		color: #323232;
+		position: absolute; */
+		top: 700%;
+	}
+}
+
+@media (max-width: 576px) {
+}
