--- a/src/assets/CircularDiagrams.css
+++ b/src/assets/CircularDiagrams.css
@@ -384,3 +384,16 @@
 .progress-circle.p100 .value-bar {
 	transform: rotate(360deg);
 }
+
+@media (max-width: 768px) {
+	.outside_measure {
+		flex-wrap: wrap;
+		margin: 3% 0 5% 0;
+	}
+
+	.progress-circle {
+		margin: 7%;
+		width: 5em;
+		height: 5em;
+	}
+}
