--- a/src/components/FilterProducts.css
+++ b/src/components/FilterProducts.css
@@ -75,3 +75,89 @@
 	grid-template-rows: repeat(55%);
 	grid-column-gap: 25px;
 }
+
+.tools_mobile {
+	display: none;
+}
+
+@media (max-width: 768px) {
+	.filter_products {
+		height: auto;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 13vh;
+	}
+
+	.tools_mobile {
+		height: auto;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		margin: 3% 0;
+	}
+
+	.input_select {
+		margin-top: 2%;
+	}
+
+	.tools {
+		display: none;
+	}
+
+	.filters {
+		width: 80%;
+		margin-top: 0;
+	}
+
+	.filters h3 {
+		width: 100%;
+		text-align: left;
+		margin-left: 0;
+	}
+
+	.filter_categories {
+		justify-content: space-evenly;
+		align-items: center;
+		text-align: left;
+		margin-left: -10%;
+	}
+
+	.filter_categories li {
+		margin: 1% 0;
+	}
+
+	.list_products {
+		height: auto;
+		width: 55%;
+	}
+
+	.container_filtered {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+	}
+}
+
+@media (max-width: 576px) {
+	.filter_products {
+		margin-top: 14vh;
+	}
+
+	.filter_categories {
+		margin-left: -14%;
+		font-size: 12px;
+	}
+
+	.filter_categories li {
+		margin: 1% 0;
+	}
+
+	.list_products {
+		height: auto;
+		width: 70%;
+	}
+}
