--- a/src/components/SaleOf.css
+++ b/src/components/SaleOf.css
@@ -65,18 +65,63 @@
 
 @media (max-width: 768px) {
 	.saleof_products {
-		/* height: 200%;
-		width: 100%;
+		height: 380%;
+		top: 700%;
+	}
+
+	.title_saleoff {
+		height: 1.5%;
+		width: 60%;
+	}
+
+	.horizontal_line_saleoff {
+		display: none;
+	}
+
+	.description_saleoff {
+		height: 2%;
+		width: 80%;
+		text-align: center;
+	}
+
+	.list_saleof {
+		height: 75%;
+	}
+
+	.container_saleof {
+		height: 100%;
+		width: 55%;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-evenly;
 		align-items: center;
-		background-color: #ffffff;
-		color: #323232;
-		position: absolute; */
-		top: 700%;
+	}
+
+	.saleoff_brands {
+		display: none;
+	}
+
+	.saleoff_brandsMobile {
+		height: auto;
+		width: 100%;
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		margin-bottom: -10%;
+	}
+
+	.saleoff_brandImg {
+		height: 65%;
+		width: 16%;
 	}
 }
 
 @media (max-width: 576px) {
+	.saleof_products {
+		top: 690%;
+	}
+
+	.container_saleof {
+		width: 70%;
+	}
 }
