--- a/src/components/Wishlist-Component.css
+++ b/src/components/Wishlist-Component.css
@@ -76,3 +76,48 @@
 	padding: 15px;
 	width: 33%;
 }
+
+.proceedCheckout_btn {
+	width: 15%;
+	background-color: #323232;
+	color: #ffffff;
+	padding: 15px;
+	text-align: center;
+	font-size: 12px;
+	font-weight: bold;
+	border: none;
+	position: relative;
+	left: 50%;
+	margin: 3% 0 0 0;
+}
+
+@media (max-width: 768px) {
+	.wishlist_container {
+		margin-top: 13vh;
+	}
+
+	.img_wishlist {
+		height: 28vh;
+	}
+
+	.title_wishlist {
+		top: 25%;
+	}
+
+	.table_total {
+		width: 90%;
+		left: 0%;
+	}
+
+	.proceedCheckout_btn {
+		width: 30%;
+		font-size: 10px;
+		left: 8%;
+	}
+}
+
+@media (max-width: 576px) {
+	.wishlist_container {
+		margin-top: 14vh;
+	}
+}
