--- a/src/components/Wishlist-Component.css
+++ b/src/components/Wishlist-Component.css
@@ -28,6 +28,7 @@
 	padding: 5px;
 	width: 90%;
 }
+
 .table caption {
 	caption-side: top;
 	text-align: left;
@@ -83,12 +84,23 @@
 	color: #ffffff;
 	padding: 15px;
 	text-align: center;
-	font-size: 12px;
+	font-size: 11px;
 	font-weight: bold;
 	border: none;
 	position: relative;
 	left: 50%;
 	margin: 3% 0 0 0;
+}
+
+.action_btn {
+	width: 75%;
+	background-color: #323232;
+	color: #ffffff;
+	padding: 10px;
+	text-align: center;
+	font-size: 10px;
+	font-weight: bold;
+	border: none;
 }
 
 @media (max-width: 768px) {
@@ -104,9 +116,23 @@
 		top: 25%;
 	}
 
+	.table th {
+		padding: 1%;
+		font-size: 2%;
+	}
+	.table td {
+		padding: 1%;
+		font-size: 1%;
+	}
+
 	.table_total {
 		width: 90%;
 		left: 0%;
+	}
+
+	.table_total td {
+		padding: 1%;
+		font-size: 15px;
 	}
 
 	.proceedCheckout_btn {
@@ -114,10 +140,37 @@
 		font-size: 10px;
 		left: 8%;
 	}
+
+	.action_btn {
+		width: 55%;
+		padding: 8%;
+		font-size: 8px;
+	}
 }
 
 @media (max-width: 576px) {
 	.wishlist_container {
 		margin-top: 14vh;
+	}
+
+	.table th {
+		padding: 1%;
+		font-size: 2%;
+	}
+	.table td {
+		padding: 1%;
+		font-size: 1%;
+	}
+
+	.table_total td {
+		padding: 1%;
+		font-size: 10px;
+	}
+
+	.action_btn {
+		height: 30px;
+		width: 45%;
+		padding: 0%;
+		font-size: 6px;
 	}
 }
