--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -195,9 +195,18 @@
 
 @media (max-width: 576px) {
 	.slide-btn {
-		top: 123%;
+		top: 130%;
 		right: 40.5%;
 		height: 35px;
 		width: 100px;
+	}
+
+	.slide-title {
+		font-size: 22px;
+	}
+
+	.slide-text {
+		top: 115%;
+		right: 20%;
 	}
 }
